2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket-unix.c (soup_address_new_cb): Ugg. Don't
	call waitpid with NOHANG. Avoid zombies. Gain friends.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.c (authorize_handler): Call
	soup_message_get_header_list.

	* src/libsoup/soup-auth.c (soup_auth_new_from_header_list): Set
	crypto strength for authentication types, and try to choose the
	strongest when authenticating.

	* src/libsoup/soup-queue.c (soup_check_used_headers): Kill warnings.

	* tests/simple-test.c (list_headers): Handle multiple values for
	header.

	* tests/handler-test.c (list_headers): Ditto.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-server.c (read_headers_cb): Fix const warnings.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-server.c (read_headers_cb): Don't create
	response_headers. This is done in soup_message_new. Use
	soup_message_get_header throughout.

	* src/libsoup/soup-queue.c (soup_check_used_headers): Write list
	of headers.
	(soup_parse_headers): Don't create response_headers. This is done
	in soup_message_new.
	(soup_debug_print_a_header): Handle multiple header vals.
	(soup_check_used_headers): Ditto.
	(soup_queue_remove_header): Ditto.
	(soup_queue_message): Don't destroy hashtable, just clear it.  
	Use soup_message_get_header throughout.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.c (soup_message_add_header): Handle
	multiple values in header hash tables.
	(free_header): Free the list of values.
	(soup_message_new): Create request_headers and response_headers
	here instead of on header insertion.
	(soup_message_set_request_header): Deprecate.
	(soup_message_get_request_header): Deprecate.
	(soup_message_set_response_header): Deprecate.
	(soup_message_get_response_header): Deprecate.

	* src/libsoup/soup-dav-server.c: Update to use new header get/add
	funcs.
